# airports-flights-analysis

./: README.md  main.py  pyproject.toml
app/dashboard/: flight_dashboard.py
app/dashboard/services/: aggregations.py  io.py
app/dashboard/ui/: charts.py  maps.py
app/docs/json/: airline-types.json  airlines-codes.json  justification-codes.json
app/model/: dataframe_manager.py  transformer.py
app/utils/: utils.py
