[project]
name = "airports-data-analysis"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pydrive2>=1.21.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
